--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -1224,6 +1224,12 @@
     <ClInclude Include="..\tier0\annotations.h">
       <Filter>sdk\tier0</Filter>
     </ClInclude>
+    <ClInclude Include="..\tier1\utllinkedlist.h">
+      <Filter>sdk\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vstdlib\concommandhash.h">
+      <Filter>sdk\vstdlib</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
@@ -1528,6 +1534,9 @@
     </ClCompile>
     <ClCompile Include="..\networksystem\bansystem.cpp">
       <Filter>sdk\networksystem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\tier1\generichash.cpp">
+      <Filter>sdk\tier1</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
