--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -573,6 +573,9 @@
     <ClCompile Include="..\public\utility\binstream.cpp">
       <Filter>sdk\public\utility</Filter>
     </ClCompile>
+    <ClCompile Include="..\tier1\generichash.cpp">
+      <Filter>sdk\tier1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1702,6 +1705,12 @@
     </ClInclude>
     <ClInclude Include="..\tier0\annotations.h">
       <Filter>sdk\tier0</Filter>
+    </ClInclude>
+    <ClInclude Include="..\tier1\utllinkedlist.h">
+      <Filter>sdk\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vstdlib\concommandhash.h">
+      <Filter>sdk\vstdlib</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
