--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -76,6 +76,7 @@
     <ClCompile Include="..\mathlib\ssenoise.cpp" />
     <ClCompile Include="..\mathlib\transform.cpp" />
     <ClCompile Include="..\mathlib\vmatrix.cpp" />
+    <ClCompile Include="..\networksystem\listmanager.cpp" />
     <ClCompile Include="..\networksystem\pylon.cpp" />
     <ClCompile Include="..\protoc\cl_rcon.pb.cc">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
@@ -229,6 +230,7 @@
     <ClInclude Include="..\mathlib\vmatrix.h" />
     <ClInclude Include="..\mathlib\vplane.h" />
     <ClInclude Include="..\milessdk\win64_rrthreads.h" />
+    <ClInclude Include="..\networksystem\listmanager.h" />
     <ClInclude Include="..\networksystem\pylon.h" />
     <ClInclude Include="..\networksystem\serverlisting.h" />
     <ClInclude Include="..\networksystem\sm_protocol.h" />
@@ -257,6 +259,7 @@
     <ClInclude Include="..\public\ihandleentity.h" />
     <ClInclude Include="..\public\inetchannel.h" />
     <ClInclude Include="..\public\inetmsghandler.h" />
+    <ClInclude Include="..\public\isurfacesystem.h" />
     <ClInclude Include="..\public\ivrenderview.h" />
     <ClInclude Include="..\public\ivscript.h" />
     <ClInclude Include="..\public\model_types.h" />
