--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -1245,6 +1245,9 @@
     <ClInclude Include="..\pluginsystem\pluginsystem.h">
       <Filter>sdk\pluginsystem</Filter>
     </ClInclude>
+    <ClInclude Include="..\engine\sdk_dll.h">
+      <Filter>sdk\engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
@@ -1558,6 +1561,9 @@
     </ClCompile>
     <ClCompile Include="..\pluginsystem\pluginsystem.cpp">
       <Filter>sdk\pluginsystem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\engine\sdk_dll.cpp">
+      <Filter>sdk\engine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
