--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -630,6 +630,9 @@
     <ClCompile Include="..\pluginsystem\pluginsystem.cpp">
       <Filter>sdk\pluginsystem</Filter>
     </ClCompile>
+    <ClCompile Include="..\engine\sdk_dll.cpp">
+      <Filter>sdk\engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1837,6 +1840,9 @@
     </ClInclude>
     <ClInclude Include="..\pluginsystem\ipluginsystem.h">
       <Filter>sdk\pluginsystem</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\sdk_dll.h">
+      <Filter>sdk\engine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
