Update CFG files
Set 'sv_quota_stringCmdsPerSecond' to "256" for development.
Enable 'bhit_enable' for development.

--- a/r5dev/resource/cfg/autoexec_dev.cfg
+++ b/r5dev/resource/cfg/autoexec_dev.cfg
@@ -3,6 +3,7 @@
 //////////////////////////
 sv_cheats                    "1" // Allow cheats on the server.
 mp_allowed                   "1" // Whether multiplayer is allowed or not.
+bhit_enable                  "1" // Bullet trajectory debug.
 developer                    "1" // Required for certain script functionality.
 
 //////////////////////////
