--- a/r5dev/resource/cfg/autoexec_server_dev.cfg
+++ b/r5dev/resource/cfg/autoexec_server_dev.cfg
@@ -6,6 +6,7 @@
 //////////////////////////
 //hostname                     "R5"     // Determines the name of the server displayed in the server browser.
 sv_requireOriginToken        "0"      // Enables origin token verification on the server
+sv_quota_stringCmdsPerSecond "256"    // Max string commands per second from a specific client.
 
 //////////////////////////
 //// SIMULATION       //// !!WARNING!!: CHANGING THESE CAN CAUSE SIMULATION ISSUES. DO NOT CHANGE FOR NON-DEBUG ACTIVITY!
