Update configuration files
-dev is now removed from every prod cfg.
-developer 1 is now removed from every prod cfg.

--- a/r5dev/resource/cfg/autoexec_client_dev.cfg
+++ b/r5dev/resource/cfg/autoexec_client_dev.cfg
@@ -6,6 +6,7 @@
 //////////////////////////
 cl_noTimeoutLocalHost                 "1"               // Do not time-out on local connections.
 cl_threaded_bone_setup                "0"               // Has to be disabled on the client to prevent deadlock.
+cl_quota_stringCmdsPerSecond          "256"             // Max string commands submissions on the client.
 
 //////////////////////////
 //// SIMULATION       //// !!WARNING!!: CHANGING THESE CAN CAUSE SIMULATION ISSUES. DO NOT CHANGE FOR NON-DEBUG ACTIVITY!
