--- a/r5dev/resource/cfg/autoexec_dev.cfg
+++ b/r5dev/resource/cfg/autoexec_dev.cfg
@@ -9,7 +9,8 @@ developer                    "1" // Required for DEVELOPER script.
 //////////////////////////
 //// NETCHAN          ////
 //////////////////////////
-net_userandomkey             "0" // Whether to use the default netkey or a randomized key on launch.
+net_useRandomKey             "0" // Use a randomized netkey on launch.
+net_processTimeBudget        "0" // Net message process budget in milliseconds (removing netchannel if exceeded).
 net_usesocketsforloopback    "1" // Whether to use network sockets layer for packets.
 
 //////////////////////////
