Added alternate mod manager that uses .r5mod instead of folders

--- a/r5dev/vproj/modManager.vcxproj
+++ b/r5dev/vproj/modManager.vcxproj
@@ -132,6 +132,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\modmanager\altManager.h" />
     <ClInclude Include="..\modmanager\manager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
