--- a/r5dev/resource/cfg/englishserver_extract_vpk.cfg
+++ b/r5dev/resource/cfg/englishserver_extract_vpk.cfg
@@ -9,3 +9,4 @@ fs_vpk_unpack "vpk/englishserver_mp_rr_canyonlands_mu1_night.bsp.pak000_dir.vpk"
 fs_vpk_unpack "vpk/englishserver_mp_rr_canyonlands_staging.bsp.pak000_dir.vpk"
 fs_vpk_unpack "vpk/englishserver_mp_rr_desertlands_64k_x_64k.bsp.pak000_dir.vpk"
 fs_vpk_unpack "vpk/englishserver_mp_rr_desertlands_64k_x_64k_nx.bsp.pak000_dir.vpk"
+fs_vpk_unpack "vpk/englishserver_mp_rr_desertlands_64k_x_64k_tt.bsp.pak000_dir.vpk"
