--- a/r5dev/resource/cfg/englishclient_build_vpk.cfg
+++ b/r5dev/resource/cfg/englishclient_build_vpk.cfg
@@ -10,3 +10,4 @@ fs_vpk_build "english" "client" "mp_rr_canyonlands_mu1_night" "1"
 fs_vpk_build "english" "client" "mp_rr_canyonlands_staging" "1"
 fs_vpk_build "english" "client" "mp_rr_desertlands_64k_x_64k" "1"
 fs_vpk_build "english" "client" "mp_rr_desertlands_64k_x_64k_nx" "1"
+fs_vpk_build "english" "client" "mp_rr_desertlands_64k_x_64k_tt" "1"
