--- a/r5dev/resource/cfg/englishclient_extract_vpk.cfg
+++ b/r5dev/resource/cfg/englishclient_extract_vpk.cfg
@@ -10,3 +10,4 @@ fs_vpk_unpack "vpk/englishclient_mp_rr_canyonlands_mu1_night.bsp.pak000_dir.vpk"
 fs_vpk_unpack "vpk/englishclient_mp_rr_canyonlands_staging.bsp.pak000_dir.vpk"
 fs_vpk_unpack "vpk/englishclient_mp_rr_desertlands_64k_x_64k.bsp.pak000_dir.vpk"
 fs_vpk_unpack "vpk/englishclient_mp_rr_desertlands_64k_x_64k_nx.bsp.pak000_dir.vpk"
+fs_vpk_unpack "vpk/englishclient_mp_rr_desertlands_64k_x_64k_tt.bsp.pak000_dir.vpk"
