--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -636,6 +636,9 @@
     <ClCompile Include="..\engine\client\cl_ents_parse.cpp">
       <Filter>sdk\engine\client</Filter>
     </ClCompile>
+    <ClCompile Include="..\engine\sys_mainwind.cpp">
+      <Filter>sdk\engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1846,6 +1849,12 @@
     </ClInclude>
     <ClInclude Include="..\engine\client\cl_ents_parse.h">
       <Filter>sdk\engine\client</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\sys_mainwind.h">
+      <Filter>sdk\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\igame.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
