more ui changes

--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -1870,6 +1870,15 @@
     <Image Include="..\resource\png\r5ricon.png">
       <Filter>sdk\resource\png</Filter>
     </Image>
+    <Image Include="..\resource\png\list.png">
+      <Filter>sdk\resource\png</Filter>
+    </Image>
+    <Image Include="..\resource\png\add.png">
+      <Filter>sdk\resource\png</Filter>
+    </Image>
+    <Image Include="..\resource\png\console.png">
+      <Filter>sdk\resource\png</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\resource\r5dev.rc">
