--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -569,6 +569,9 @@
     <ResourceCompile Include="..\resource\r5dev.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\resource\png\add.png" />
+    <Image Include="..\resource\png\console.png" />
+    <Image Include="..\resource\png\list.png" />
     <Image Include="..\resource\png\r5ricon.png" />
     <Image Include="..\shared\resource\lockedserver.png" />
   </ItemGroup>
