Remane NavMesh "Sample" files to "Editor"

--- a/r5dev/vproj/naveditor.vcxproj
+++ b/r5dev/vproj/naveditor.vcxproj
@@ -27,10 +27,10 @@
     <ClInclude Include="..\naveditor\include\NavMeshTesterTool.h" />
     <ClInclude Include="..\naveditor\include\OffMeshConnectionTool.h" />
     <ClInclude Include="..\naveditor\include\PerfTimer.h" />
-    <ClInclude Include="..\naveditor\include\Sample.h" />
-    <ClInclude Include="..\naveditor\include\SampleInterfaces.h" />
-    <ClInclude Include="..\naveditor\include\Sample_Debug.h" />
-    <ClInclude Include="..\naveditor\include\Sample_TileMesh.h" />
+    <ClInclude Include="..\naveditor\include\Editor.h" />
+    <ClInclude Include="..\naveditor\include\EditorInterfaces.h" />
+    <ClInclude Include="..\naveditor\include\Editor_Debug.h" />
+    <ClInclude Include="..\naveditor\include\Editor_TileMesh.h" />
     <ClInclude Include="..\naveditor\include\TestCase.h" />
     <ClInclude Include="..\naveditor\include\ValueHistory.h" />
     <ClInclude Include="..\thirdparty\fastlz\fastlz.h" />
@@ -53,10 +53,10 @@
     <ClCompile Include="..\naveditor\NavMeshTesterTool.cpp" />
     <ClCompile Include="..\naveditor\OffMeshConnectionTool.cpp" />
     <ClCompile Include="..\naveditor\PerfTimer.cpp" />
-    <ClCompile Include="..\naveditor\Sample.cpp" />
-    <ClCompile Include="..\naveditor\SampleInterfaces.cpp" />
-    <ClCompile Include="..\naveditor\Sample_Debug.cpp" />
-    <ClCompile Include="..\naveditor\Sample_TileMesh.cpp" />
+    <ClCompile Include="..\naveditor\Editor.cpp" />
+    <ClCompile Include="..\naveditor\EditorInterfaces.cpp" />
+    <ClCompile Include="..\naveditor\Editor_Debug.cpp" />
+    <ClCompile Include="..\naveditor\Editor_TileMesh.cpp" />
     <ClCompile Include="..\naveditor\TestCase.cpp" />
     <ClCompile Include="..\naveditor\ValueHistory.cpp" />
     <ClCompile Include="..\thirdparty\fastlz\fastlz.c">
